// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroDetails renders basic data 1`] = `
<div
  className="hero-details"
>
  <img
    alt="3-D Man"
    className="hero-details__image"
    src="the/img/url"
  />
  This is a test!
  <div
    className="hero-details__lists"
  />
</div>
`;

exports[`HeroDetails renders collections data 1`] = `
<div
  className="hero-details"
>
  <img
    alt="3-D Man"
    className="hero-details__image"
    src="the/img/url"
  />
  This is a test!
  <div
    className="hero-details__lists"
  >
    <div
      className="hero-details__list"
    >
      <NameList
        collectionName="Comics"
        names={
          Array [
            "comicA",
            "comicB",
          ]
        }
      />
    </div>
    <div
      className="hero-details__list"
    >
      <NameList
        collectionName="Series"
        names={
          Array [
            "serieA",
            "serieB",
          ]
        }
      />
    </div>
  </div>
</div>
`;
